<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="1dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ImageVIew to display our Course Image-->

        <!--Text View to display Course Name-->


        <ImageView
            android:id="@+id/product_archive_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_archive_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/product_archive_img"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/product_archive_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_archive_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_archive_title"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/product_archive_img"
            android:drawablePadding="2dp"
            android:text="@string/short_description"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toEndOf="@+id/product_archive_img"
            app:layout_constraintTop_toBottomOf="@+id/product_archive_title"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/product_archive_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="2dp"
            android:text="@string/price_10_jd"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/product_archive_status"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/product_archive_img"
            app:layout_constraintTop_toBottomOf="@+id/product_archive_desc"
            app:layout_constraintVertical_bias="0.888" />

        <TextView
            android:id="@+id/product_archive_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="2dp"
            android:text="@string/status_new"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/product_archive_quantity"
            app:layout_constraintTop_toBottomOf="@+id/product_archive_desc" />

        <TextView
            android:id="@+id/product_archive_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawablePadding="2dp"
            android:text="@string/quantity_1"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_archive_desc"
            app:layout_constraintVertical_bias="0.944"
            android:fontFamily="@font/poppins_bold"
            />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/product_archive_update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:fontFamily="@font/poppins_bold"
                android:padding="3dp"
                android:layout_weight="1"
                android:text="Update"
                android:textColor="@color/mom_colorBlue"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/product_archive_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.929"
                app:layout_constraintStart_toEndOf="@+id/product_archive_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/product_archive_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:fontFamily="@font/poppins_bold"
                android:padding="3dp"
                android:text="Delete"
                android:textColor="@color/mom_colorRed"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/product_archive_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/product_archive_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


